--- a/_posts/2017-10-13-Android.md
+++ b/_posts/2017-10-13-Android.md
@@ -57,7 +57,8 @@ tag: C
             android:id="@+id/edt_password"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="2"/>
+            android:layout_weight="2"
+            android:inputType="textPassword"/>
 
     </LinearLayout>
 
@@ -78,7 +79,7 @@ tag: C
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="清除"/>
-            
+
     </LinearLayout>
 </LinearLayout>
 ```
