--- a/_posts/2017-10-13-Android.md
+++ b/_posts/2017-10-13-Android.md
@@ -10,7 +10,7 @@ tag: C
 本次做的是一个简单且丑陋的用户登录界面，主要是为了简单初步介绍控件的常用功能一二。
 那么在此先附上丑陋界面图ヾ(。￣□￣)ﾂ゜゜゜
 <div algin = "center">
-  <src ="/images/image/jiemian.png"
+  <img src="/images/image/jiemian.png"/>
 </div>
 
 我们首先设计登录界面，如下代码是activity_main.xml:
