--- a/_posts/2017-10-13-Android.md
+++ b/_posts/2017-10-13-Android.md
@@ -7,10 +7,11 @@ tag: C
 ---
 
 由于本人也是Android萌新，在此写一个简单的Android小程序，介绍EditText、以及Intent的部分功能的使用，为同为Android萌新的朋友一起分享分享。 ヾ(o◕∀◕)ﾉヾ
-本次做的是一个简单且丑陋的用户登录界面，主要是为了简单初步介绍控件的常用功能一二。
-那么在此先附上丑陋界面图ヾ(。￣□￣)ﾂ゜゜゜
+
+本次做的是一个简单且丑陋的用户登录界面，主要是为了简单初步介绍控件的常用功能一二。那么在此先附上丑陋界面图ヾ(。￣□￣)ﾂ゜゜゜
+
 <div algin = "center">
-  <img src="/images/image/jiemian.png" width = "1000" height="1050"/>
+  <img src="/images/image/jiemian.png" width = "270" height="480"/>
 </div>
 
 我们首先设计登录界面，如下代码是activity_main.xml:
@@ -85,21 +86,50 @@ tag: C
 ```
 登录界面有了，我们继续对登录界面中的控件进行功能的添加，其中使用了：
 1.EditText的getText()方法，用于获取用户所输入的内容。
-2.为Button的点击事件注册一个监听器，每当用户单击按钮时，执行监听器中的onClick()方法。
-3.Intent的跳转事件，首先创建一个Intent实例，需要传入俩个参数，第一个参数为context即一个启动活动上下文，第二个参数为Class即指定想要启动的活动。
-  而Intent也可
-（代码段）
 
+2.为Button的点击事件注册一个监听器，每当用户单击按钮时，执行监听器中的onClick()方法。
+
+3.Intent的跳转事件，首先创建一个Intent实例，需要传入俩个参数，第一个参数为context即一个启动活动上下文，第二个参数为Class即指定想要启动的活动。而Intent也可以传值，使用Intent.putExtra()方法，通过键值对的方式进行传值，第一个参数为键值，第二个参数为对应的值。(我们默认设置登录帐号为:shanks 密码为:123456)
+
+MainActivity的代码如下:
 ```
-#include<stdio.h>
-#include<conio.h>
-void main()
-{
- int i = 560, h, m;
- h = i / 60;
- m = i % 60;
- printf("%d小时%d分钟",h,m);
- getchar();
+public class MainActivity extends AppCompatActivity {
+
+    Button btn_login,btn_clean;
+    EditText edt_account, edt_password;
+
+    @Override
+    protected void onCreate(Bundle savedInstanceState) {
+        super.onCreate(savedInstanceState);
+        setContentView(R.layout.activity_main);
+
+        edt_account = (EditText) findViewById(R.id.edt_account);
+        edt_password = (EditText) findViewById(R.id.edt_password);
+
+        btn_login = (Button) findViewById(R.id.btn_login);
+        btn_login.setOnClickListener(new View.OnClickListener() {
+            @Override
+            public void onClick(View v) {
+                String account = edt_account.getText().toString();
+                String password = edt_password.getText().toString();
+                if (account.equals("shanks") && account != null && password.equals("123456") && password != null) {
+                    Intent intent = new Intent(MainActivity.this, SecActivity.class);
+                    intent.putExtra("data", "Hello,SecActivity!");
+                    startActivity(intent);
+                } else {
+                    Toast.makeText(MainActivity.this, "帐号或密码不能为空", Toast.LENGTH_SHORT).show();
+                }
+
+            }
+        });
+        btn_clean = (Button) findViewById(R.id.btn_clean);
+        btn_clean.setOnClickListener(new View.OnClickListener() {
+            @Override
+            public void onClick(View v) {
+                edt_account.setText("");
+                edt_password.setText("");
+            }
+        });
+    }
 }
 ```
-ok开写 1
