--- a/_posts/2017-10-13-Android.md
+++ b/_posts/2017-10-13-Android.md
@@ -85,7 +85,7 @@ tag: C
 </LinearLayout>
 ```
 登录界面有了，我们继续对登录界面中的控件进行功能的添加，其中使用了：
-1.EditText的getText()方法，用于获取用户所输入的内容。
+1.EditText的getText()方法，用于获取用户所输入的内容，而setText()方法，用于设置EditText中的值。
 
 2.为Button的点击事件注册一个监听器，每当用户单击按钮时，执行监听器中的onClick()方法。
 
@@ -133,3 +133,60 @@ public class MainActivity extends AppCompatActivity {
     }
 }
 ```
+由于Intent要实现跳转界面，我们肯定还需要第二个活动，那么我们另外创建一个名为SecActivity的活动并将它的布局命名为：sec_activity
+
+我们在sec_activity中放入一个TextView用来显示从MainActivity传来的值，sec_activity.xml代码如下：
+```
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <TextView
+        android:id="@+id/txt"
+        android:textSize="24sp"
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+</RelativeLayout>
+```
+接下来是我们在SecActivity中获取由MainActivity传来的Intent,使用getIntent()获取Intent实例，并通过getStringExtra()方法，获取键值对中的字符串数据。
+
+SecActivity.java代码如下：
+
+```
+public class SecActivity extends AppCompatActivity {
+
+    TextView textView;
+
+    @Override
+    protected void onCreate(Bundle savedInstanceState) {
+        super.onCreate(savedInstanceState);
+        setContentView(R.layout.sec_activity);
+
+        textView = (TextView) findViewById(R.id.txt);
+        Intent intent = getIntent();
+        String data = intent.getStringExtra("data");
+        textView.setText(data);
+    }
+}
+```
+注意：在创建Activity时，需要在AndroidManifest.xml中在<application></application>标签内进行注册。就像这样：ヾ(。￣□￣)ﾂ゜゜゜
+```
+<application
+    ...
+    <activity android:name=".SecActivity"></activity>
+</application>
+
+```
+
+至此，就大工告成拉!!!让我们来看看效果吧! ヾ(*´▽‘*)ﾉ
+<div float="left">
+  <img src = "/images/image/jiemian2.png" width="270" height="480" />
+</div>
+
+当点击登录按钮时，跳转至SecActivity活动：
+<div float ="right">
+  <img src = "/images/image/secactivity.png" width="270" height="480" />
+</div>
