--- a/_posts/2017-10-13-Android.md
+++ b/_posts/2017-10-13-Android.md
@@ -3,12 +3,12 @@ layout: post  #这个不变
 title: "第一个Android项目-登录界面" #标题
 date: 2017-10-13 21:17 #时间
 description: "EditText、Button等控件以及Intent的部分功能的使用"  #说明
-tag: C
+tag: Android #这是分类标签
 ---
 
 由于本人也是Android萌新，在此写一个简单的Android小程序，介绍EditText、以及Intent的部分功能的使用，为同为Android萌新的朋友一起分享分享。 ヾ(o◕∀◕)ﾉヾ
 
-本次做的是一个简单且丑陋的用户登录界面，主要是为了简单初步介绍控件的常用功能一二。那么在此先附上丑陋界面图ヾ(。￣□￣)ﾂ゜゜゜
+本次做的是一个简单且丑陋的用户登录界面，主要是为了简单初步介绍控件的常用功能一二。那么在此先附上丑陋界面图。ヾ(。￣□￣)ﾂ゜゜゜
 
 <div algin = "center">
   <img src="/images/image/jiemian.png" width = "270" height="480"/>
@@ -85,6 +85,7 @@ tag: C
 </LinearLayout>
 ```
 登录界面有了，我们继续对登录界面中的控件进行功能的添加，其中使用了：
+
 1.EditText的getText()方法，用于获取用户所输入的内容，而setText()方法，用于设置EditText中的值。
 
 2.为Button的点击事件注册一个监听器，每当用户单击按钮时，执行监听器中的onClick()方法。
@@ -133,7 +134,7 @@ public class MainActivity extends AppCompatActivity {
     }
 }
 ```
-由于Intent要实现跳转界面，我们肯定还需要第二个活动，那么我们另外创建一个名为SecActivity的活动并将它的布局命名为：sec_activity
+由于Intent要实现跳转界面，我们肯定还需要第二个活动，那么我们另外创建一个名为SecActivity的活动并将它的布局命名为：sec_activity。
 
 我们在sec_activity中放入一个TextView用来显示从MainActivity传来的值，sec_activity.xml代码如下：
 ```
@@ -182,11 +183,11 @@ public class SecActivity extends AppCompatActivity {
 ```
 
 至此，就大工告成拉!!!让我们来看看效果吧! ヾ(*´▽‘*)ﾉ
-<div float="left">
+<div>
   <img src = "/images/image/jiemian2.png" width="270" height="480" />
 </div>
 
 当点击登录按钮时，跳转至SecActivity活动：
-<div float ="right">
+<div>
   <img src = "/images/image/secactivity.png" width="270" height="480" />
 </div>
