--- a/_posts/2017-10-13-Android.md
+++ b/_posts/2017-10-13-Android.md
@@ -191,3 +191,5 @@ public class SecActivity extends AppCompatActivity {
 <div>
   <img src = "/images/image/secactivity.png" width="270" height="480" />
 </div>
+
+代码地址：https://github.com/Shanks07/androidSources/tree/master/MyApplication
