--- a/_posts/2017-10-22-File.md
+++ b/_posts/2017-10-22-File.md
@@ -11,7 +11,8 @@ tag: java
 首先是文件的创建与删除：通常使用以下3种构造方法来创建文件对象。
 
 1.File(String pathname)，其中pathname 指路径名称（含文件名），该构造方法通过将给定路径名字字符串转换为抽象路径名来创建一个File实例。
----
+```
 eg：File file = new File("e:/java.txt");
----
-2.File(String parent,String child),
+```
+
+2.File(String parent,String child)
