--- a/_posts/2017-10-22-File.md
+++ b/_posts/2017-10-22-File.md
@@ -8,11 +8,30 @@ tag: java
 
 在学习Android的时候，总会感觉力不从心，觉得自己java知识不够牢固，所以最近看了下java中的一些知识，今天简单给大家介绍java中的File类。
 
-首先是文件的创建与删除：通常使用以下3种构造方法来创建文件对象。
+一、首先是文件的创建与删除
+
+通常使用以下3种构造方法来创建文件对象。
 
 1.File(String pathname)，其中pathname 指路径名称（含文件名），该构造方法通过将给定路径名字字符串转换为抽象路径名来创建一个File实例。
 ```
 eg：File file = new File("e:/java.txt");
 ```
 
-2.File(String parent,String child)
+2.File(String parent,String child)，该构造方法根据定义的父路径和子路径字符串（含文件名）创建一个新的File对象。
+```
+eg：File file = new File(E:/,java.txt);
+```
+
+3.File(File f,String child)，该构造方法根据parent抽象路径名和child路径名字符串创建一个新的File实例。
+```
+eg：File file = new File(E:/doc,java.txt);
+```
+
+当使用File类创建一个文件对象后，如果当前目录中不存在该文件，File类对象可通过调用createNewFile()方法创建一个，如果存在，可通过文件对象的delete()方法删除。
+
+二、获取文件信息
+
+File类提供了很多方法用于获取一些文本本身信息，常用方法如图：
+<div>
+  <img src="/images/image/File.png">
+</div>
