--- a/_posts/2017-10-24-XmlParse.md
+++ b/_posts/2017-10-24-XmlParse.md
@@ -6,5 +6,32 @@ description: "简单介绍XML数据的解析过程"
 tag: Android
 ---
 
-
 ヾ(×× ) ﾂ 博客更新中...
+在讲XML数据解析前，我们需要创建一个XML格式的数据：
+```
+<people>
+  <person>
+    <id>1</id>
+    <name>Shanks</name>
+    <sex>男</sex>
+  </person>
+  <person>
+    <id>2</id>
+    <name>Catherine/name>
+    <sex>女</sex>
+  </person>
+  <person>
+    <id>3</id>
+    <name>Katherine</name>
+    <sex>女</sex>
+  </person>
+</people>
+```
+1.使用Pull解析方式。
+
+我们首先要获取到一个XmlPullParserFactory的实例，并借助这个实例得到XmlPullParser对象，然后调用XmlPullParser的setInput()方法将服务器返回的XML数据设置进去就可以开始解析了。
+```
+XmlPullParserFactory factory = XmlPullParserFactory.newInstance();
+XmlPullParser xmlPullParser = factory.newPullParser();
+xmlPullParser.setInput();
+```
