--- a/_posts/2017-10-24-XmlParse.md
+++ b/_posts/2017-10-24-XmlParse.md
@@ -33,5 +33,43 @@ tag: Android
 ```
 XmlPullParserFactory factory = XmlPullParserFactory.newInstance();
 XmlPullParser xmlPullParser = factory.newPullParser();
-xmlPullParser.setInput();
+xmlPullParser.setInput(new StringReader(XXX));//XXX为xml数据
+```
+
+然后我们通过getEventType()可以得到当前的解析事件，然后在一个while循环中不断地进行解析。如果当前的解析事件不等于XmlPullParser.END_DOCUMENT，说明解析工作还没完成，调用next()方法后可以获取下一个解析事件。
+
+在while循环中，用getName()方法得到当前节点的名字，若发现节点名等于id、name或者sex，就调用nextText()方法来获取节点内具体的内容，当解析完一个app节点后就将获取到的内容打印出来。
+```
+String id = "";
+String name = "";
+String sex = "";
+int eventType = xmlPullParser.getEventType();
+while(eventType != XmlPullParser.END_DOCUMENT){
+  String nodeName = xmlPullParser.getName();
+  swtich(nodeName){
+    //开始解析节点
+    case XmlPullParser.START_TAG:{
+      if("id".equals(nodeName)){
+        id = xmlPullParser.nextText();
+      }else if("name".equals(nodeName)){
+        name = xmlPullParser.nextText();
+      }else if("sex".equals(nodeName)){
+        sex = xmlPullParser.nextText();
+      }
+      break;
+    }
+    //完成解析节点
+    case XmlPullParser.END_tAG:{
+      if("person".equals(nodeName)){
+        Log.d("MainActivity","id is "+ id);
+        Log.d("MainActivity","name is "+ name);
+        Log.d("MainActivity","sex is "+ sex);
+      }
+      break;
+    }
+    default:
+      break;
+  }
+  eventType = xmlPullParser.next();//获取下一个解析事件
+}
 ```
