--- a/_posts/2017-10-24-XmlParse.md
+++ b/_posts/2017-10-24-XmlParse.md
@@ -13,17 +13,17 @@ tag: Android
   <person>
     <id>1</id>
     <name>Shanks</name>
-    <sex>男</sex>
+    <sex>male</sex>
   </person>
   <person>
     <id>2</id>
-    <name>Catherine/name>
-    <sex>女</sex>
+    <name>Catherine</name>
+    <sex>female</sex>
   </person>
   <person>
     <id>3</id>
     <name>Katherine</name>
-    <sex>女</sex>
+    <sex>female</sex>
   </person>
 </people>
 ```
