--- a/_posts/2017-10-24-XmlParse.md
+++ b/_posts/2017-10-24-XmlParse.md
@@ -73,3 +73,5 @@ while(eventType != XmlPullParser.END_DOCUMENT){
   eventType = xmlPullParser.next();//获取下一个解析事件
 }
 ```
+
+代码地址：https://github.com/Shanks07/androidSources/tree/master/ParserXml
