--- a/_posts/2017-10-13-Android.md
+++ b/_posts/2017-10-13-Android.md
@@ -192,4 +192,4 @@ public class SecActivity extends AppCompatActivity {
   <img src = "/images/image/secactivity.png" width="270" height="480" />
 </div>
 
-代码地址：https://github.com/Shanks07/androidSources/tree/master/MyApplication
+代码地址：[点击这里ヾ(･ω･`｡)](https://github.com/Shanks07/androidSources/tree/master/MyApplication)
