--- a/_posts/2017-11-09-Intent.md
+++ b/_posts/2017-11-09-Intent.md
@@ -8,12 +8,52 @@ tag: Android
 
 博客更新ing...
 
-#
-前言
+#前言#
 
-之前写Android项目的时候传值大部分都是用Intent.putExtra()的方式进行键值对的传递。今天看了下书，Intent传递对象，感觉确实不错，mark下来。
+之前写Android项目的时候传值大部分都是用Intent.putExtra()的方式进行键值对的传递。今天看了下书中的Intent传递对象，mark下来。
 
-#
-正文
+#正文#
 
-第一种使用Intent传递对象的方法：Serializable。方法和它的名字一样“序列化”，将一个**对象**转换成**可存储或可传输**的状态。序列化后的对象既可以在网络上进行传输，又可以存储到本地。
+#####Intent传递对象之Serializable#####
+
+方法和它的名字一样“序列化”，将一个**对象**转换成**可存储或可传输**的状态。序列化后的对象既可以在网络上进行传输，又可以存储到本地。
+
+比如有一个Animal类，其中含name和type两个字段，若要将它序列化,我们只需要该类实现Serializable接口。
+```
+public class Fruit implements Serializable{
+
+  private String name;
+
+  private int type;
+
+  public String getName(){
+    return name;
+  }
+
+  public int getType(){
+    return type;
+  }
+
+  public void setName(String name){
+    this.name = name;
+  }
+
+  public void setType(int type){
+    this.type = type;
+  }
+}
+```
+接下来只需要在MainActivity中写：
+```
+Animal animal = new Animal();
+animal.setName("Dog");
+animal.setType("1");
+Intent intent = new Intent(MainActivity.this,SecondActiviy.class);
+intent.putExtra("animal",animal);
+startActivity(intent);
+```
+我们可以一个对象实例传入到putExtra()方法中，然后在SecondActiviy中写：
+```
+Animal animal = (Animal)getIntent.getSerializableExtra("animal");
+```
+调用getSerializableExtra()方法来获取传递过来的序列号对象，再向下转型成Animal对象。
