--- a/_posts/2017-11-09-Intent.md
+++ b/_posts/2017-11-09-Intent.md
@@ -6,21 +6,17 @@ description: "Android中使用Intent传递对象的俩方法：Serializable、Pa
 tag: Android
 ---
 
-博客更新ing...
+# 前言
+今天看了第一行代码中的Intent传递对象，就mark下来啦。_(눈_ 눈」∠)_
 
-#前言#
+# 正文
 
-之前写Android项目的时候传值大部分都是用Intent.putExtra()的方式进行键值对的传递。今天看了下书中的Intent传递对象，mark下来。
-
-#正文#
-
-#####Intent传递对象之Serializable#####
-
+### Serializable:
 方法和它的名字一样“序列化”，将一个**对象**转换成**可存储或可传输**的状态。序列化后的对象既可以在网络上进行传输，又可以存储到本地。
 
-比如有一个Animal类，其中含name和type两个字段，若要将它序列化,我们只需要该类实现Serializable接口。
+比如有一个Dog类，其中含name（名字）和type（品种）两个字段，若要将它序列化,我们只需要该类实现Serializable接口。
 ```
-public class Fruit implements Serializable{
+public class Dog implements Serializable{
 
   private String name;
 
@@ -45,15 +41,80 @@ public class Fruit implements Serializable{
 ```
 接下来只需要在MainActivity中写：
 ```
-Animal animal = new Animal();
-animal.setName("Dog");
-animal.setType("1");
+Dog dog = new Dog();
+dog.setName("Snoopy");
+dog.setType("1");
 Intent intent = new Intent(MainActivity.this,SecondActiviy.class);
-intent.putExtra("animal",animal);
+intent.putExtra("dog",dog);
 startActivity(intent);
 ```
-我们可以一个对象实例传入到putExtra()方法中，然后在SecondActiviy中写：
+这样我们就可以将一个Dog对象实例传入到putExtra()方法中，然后在SecondActiviy中写：
 ```
-Animal animal = (Animal)getIntent.getSerializableExtra("animal");
+Dog dog = (Dog)getIntent.getSerializableExtra("dog");
 ```
-调用getSerializableExtra()方法来获取传递过来的序列号对象，再向下转型成Animal对象。
+调用getSerializableExtra()方法来获取传递过来的序列号对象，再向下转型成Dog对象。
+
+### Parcelable:
+Parcelable的实现原理：将一个**完整的对象**进行**分解**，而**分解后的每一部分**都是**Intent所支持的数据类型**。
+
+代码如下：
+```
+public class Dog implements Parcelable{
+
+  private String name;
+
+  private int type;
+
+  public String getName(){
+    return name;
+  }
+
+  public int getType(){
+    return type;
+  }
+
+  public void setName(String name){
+    this.name = name;
+  }
+
+  public void setType(int type){
+    this.type = type;
+  }
+
+  @Override
+  public int describeContents(){
+    return 0;
+  }
+
+  @Override
+  public void writeToParcel(Parcel dest,int flags){
+    dest.writeString(name);
+    dest.writeInt(type);
+  }
+
+  public static final Parcelable.Creator<Dog> CREATOR = new Parcelable.Creator<Dog>(){
+
+    @Override
+    public Dog createFromParcel(Parcel source){
+      Dog dog = new Dog();
+      dog.name = source.readString();
+      dog.type = source.readInt();
+      return dog;
+    }
+
+    @Override
+    public Dog[] newArray(int size){
+      return new Dog[size];
+    }
+  };
+
+}
+```
+实现Parcelable接口，必须重写describeContents()和writeToParcel()方法，其中describeContents()方法直接返回0，而writeToParcel()方法中，我们需要调用Parcel的WirteXxx()方法，将Dog类中的字段一一写进来。此外，我们还**必须**在Dog类中提供一个名为**CREATOR**的常量，这里创建了Parcelable.Creator接口的一个实现，将泛型指定为Dog。然后重写createFromParcel()和newArray()这两个方法，其中createFromParcel()方法中，我们要通过Parcel的readXxx()方法，读取刚才写入的name和type字段，并创建一个Dog对象进行返回。**读取的顺序一定要和刚才写入的顺序完全相同**。而newArray()方法，只需要new一个Dog数组，并使用方法中传入的size即可。
+
+然后在SecondActiviy中写：
+```
+Dog dog = (Dog)getIntent.getParcelableExtra("dog");
+```
+
+至此，Intent传递对象的两个方法就讲完啦! ヾ(*´▽‘*)ﾉ
