--- a/_posts/2017-11-09-Intent.md
+++ b/_posts/2017-11-09-Intent.md
@@ -6,13 +6,13 @@ description: "Android中使用Intent传递对象的俩方法：Serializable、Pa
 tag: Android
 ---
 
-# 前言
-今天看了第一行代码中的Intent传递对象，就mark下来啦。_(눈_ 눈」∠)_
+# 前言：
+今天看了第一行代码中的Intent传递对象，就mark下来啦。_(눈_ 눈」∠)_ ...
 
-# 正文
+## 正文：
 
-### Serializable:
-方法和它的名字一样“序列化”，将一个**对象**转换成**可存储或可传输**的状态。序列化后的对象既可以在网络上进行传输，又可以存储到本地。
+### Serializable:将一个**对象**转换成**可存储或可传输**的状态。
+方法和它的名字一样“序列化”，序列化后的对象既可以在网络上进行传输，又可以存储到本地。
 
 比如有一个Dog类，其中含name（名字）和type（品种）两个字段，若要将它序列化,我们只需要该类实现Serializable接口。
 ```
@@ -54,9 +54,7 @@ Dog dog = (Dog)getIntent.getSerializableExtra("dog");
 ```
 调用getSerializableExtra()方法来获取传递过来的序列号对象，再向下转型成Dog对象。
 
-### Parcelable:
-Parcelable的实现原理：将一个**完整的对象**进行**分解**，而**分解后的每一部分**都是**Intent所支持的数据类型**。
-
+### Parcelable:将一个**完整的对象**进行**分解**，而**分解后的每一部分**都是**Intent所支持的数据类型**。
 代码如下：
 ```
 public class Dog implements Parcelable{
