--- a/_posts/2017-11-09-Intent.md
+++ b/_posts/2017-11-09-Intent.md
@@ -114,8 +114,9 @@ public class Dog implements Parcelable{
 ```
 Dog dog = (Dog)getIntent.getParcelableExtra("dog");
 ```
+
 ### 使用Serializable传递对象集合。
-当我们需要实用哦Intent传递多个对象时，我们需要通过集合进行传递，直接上代码：
+当我们需要使用Intent传递多个对象时，我们需要通过集合进行传递，直接上代码：
 ```
 public class MainActivity extends Activity {
 
@@ -145,7 +146,7 @@ public class MainActivity extends Activity {
 ```
 这样我们就可以将一个Dog对象集合list传入到putExtras()方法中，然后在SecondActiviy中写：
 ```
-public class MainActivity extends Activity {
+public class SecondActiviy extends Activity {
 
     List<Dog> list;
 
@@ -159,16 +160,49 @@ public class MainActivity extends Activity {
 }
 ```
 通过调用intent.getSerializableExtra()方法，获取我们对象集合，再通过list.get()方法，获取我们对应的对象。
-### 使用Serializable传递对象集合。
-更新ing。。。
+### 使用Parcelable传递对象集合。
+```
+public class MainActivity extends Activity {
 
+    List<Dog> list = new ArrayList<Dog>();
 
+    public void onCreate(Bundle savedInstanceState) {
+      .........
 
+      Dog dog = new Dog();
+      dog.setName("Snoopy");
+      dog.setType("1");
 
+      Dog dog2 = new Dog();
+      dog2.setName("Jerry");
+      dog2.setType("1");
 
+      list.add(dog);
+      list.add(dog2);
+      Intent intent = new Intent(MainActivity.this,SecondActiviy.class);
+      Bundle bundle = new Bundle();
 
+      bundle.putParcelableArrayList("list",(ArrayList<Dog>)list);//序列化，类型转化为(Serializable)
+      intent.putExtras(bundle);
+      startActivity(intent);
 
+    }
+}
+```
+这样我们就可以将一个Dog对象集合list传入到putExtras()方法中，然后在SecondActiviy中写：
+```
+public class SecondActiviy extends Activity {
 
+    List<Dog> list;
 
+    public void onCreate(Bundle savedInstanceState) {
+        .........
+        Intent intent = getIntent();
+        list = intent.getParcelableArrayListExtra("list");//getParcelableArrayListExtra方法，获取对象集合list
+        Dog dog = list.get(0);
+        Dog dog2 = list.get(1);
+    }
+}
+```
 
-至此，Intent传递对象的两个方法就讲完啦! ヾ(*´▽‘*)ﾉ
+至此，Intent传递对象、对象集合的两个方法就讲完啦! ヾ(*´▽‘*)ﾉ
