--- a/_posts/2018-03-05-javaLearn2.md
+++ b/_posts/2018-03-05-javaLearn2.md
@@ -33,54 +33,142 @@ Dynamic web module version : 3.0, 完成项目创建。
 
 2.项目创建完成后，在Java Resources下的src目录中创建 controller包，再右键创建Servlet （只有当我们在透视图中选择的java EE选项，才会便捷的出现Servlet，选择其他选项，则出现其相应的一些东西0.0），创建完成后生成了ItemS.java。（这就是控制器层 controller 将用户的请求进行权限判断和初步处理，符合要求的请求传递给数据访问层 —— java servlet）
 
-3.我们继续创建一个vo包，创建一个TestVO类，存入数据库中的相应数据：
+我们数据库的内容如下：
 <div>
-  <img src="/images/image/javaLearn1_3.png"/>
+  <img src="images/image/javaLearn1_5.png">
 </div>
 
+本次我们实现获取数据库的所有内容的方法，getAll()方法：
 ```
-package vo;
+package controller;
 
-public class TestVO {
-	private int vonum;
-	private String name;
-	private int high;
+import java.io.IOException;
+import java.io.PrintWriter;
+import java.sql.Date;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Map.Entry;
 
-	public TestVO() {
+import javax.servlet.ServletException;
+import javax.servlet.annotation.WebServlet;
+import javax.servlet.http.HttpServlet;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+
+import dao.ItemDao;
+import entity.Item;
+import net.sf.json.JSONArray;
+import net.sf.json.JSONObject;
+import net.sf.json.JsonConfig;
+import utils.JsonDateValueProcessor;
+import utils.Utils;
+import vo.DayCount;
+import vo.MonthCount;
+import vo.Rank;
+import vo.Report;
+import vo.Reports;
+import vo.YearData;
+
+/**
+ * Servlet implementation class ItemS
+ */
+@WebServlet("/ItemS")
+public class ItemS extends HttpServlet {
+	private static final long serialVersionUID = 1L;
+	String option;
+	ItemDao itemDao;
+
+	/**
+	 * @see HttpServlet#HttpServlet()
+	 */
+	// 构造方法 对象声明时候new调用的方法，用户初始化各种设置 成员变量
+	public ItemS() {
 		super();
+		itemDao = new ItemDao();
 		// TODO Auto-generated constructor stub
 	}
 
-	public TestVO(String name, int high) {
-		super();
-		this.name = name;
-		this.high = high;
+	/**
+	 * @see HttpServlet#doGet(HttpServletRequest request, HttpServletResponse
+	 *      response)
+	 */
+	// request存放了用户全部的相关信息
+	protected void doGet(HttpServletRequest request, HttpServletResponse response)
+			throws ServletException, IOException {
+		response.setCharacterEncoding("utf-8");
+		response.setContentType("text/html; charset=utf-8");
+		PrintWriter out = response.getWriter();
+
+		option = request.getParameter("option");// 从用户的请求中获取一个参数
+		List<DayCount> dayCounts;
+		String dateString;
+		List<Item> items;
+		int income;
+		int pay;
+		MonthCount monthCount;
+		DayCount dayCount;
+		JsonConfig jsonConfig = new JsonConfig();
+		JSONArray jsonitems;
+
+		switch (option) {
+		case "getAll":
+			dateString = request.getParameter("dateString");
+			items = getAll();
+
+			income = 0;
+			pay = 0;
+			for (Item item : items) {
+				if (item.getItemtype() == -1) {
+					pay += item.getMoney();
+				} else {
+					income += item.getMoney();
+				}
+			}
+
+			dayCount = new DayCount("11-02", "星期二", income, pay, items);
+			dayCounts = new ArrayList<DayCount>();
+			dayCounts.add(dayCount);
+			monthCount = new MonthCount(2000, 1000, 1000, dayCounts);
+			// 将java的集合对象转换为js的集合对象，用，[]{}分隔的字符串
+			/**
+			 * JsonConfig对象能够影响java对象转成json字符串的行为
+			 * 要控制JSON序列化过程中Date对象的格式化以及数值的格式化，JsonValueProcessor是最好的选择。
+			 */
+			jsonConfig.registerJsonValueProcessor(Date.class, new JsonDateValueProcessor());
+			jsonitems = JSONArray.fromObject(monthCount, jsonConfig);
+
+			System.out.println(jsonitems.toString());
+			break;
+    default:
+      break;
 	}
 
-	public int getVonum() {
-		return vonum;
+	/**
+	 * @see HttpServlet#doPost(HttpServletRequest request, HttpServletResponse
+	 *      response)
+	 */
+	protected void doPost(HttpServletRequest request, HttpServletResponse response)
+			throws ServletException, IOException {
+		// TODO Auto-generated method stub
+		doGet(request, response);
 	}
 
-	public void setVonum(int vonum) {
-		this.vonum = vonum;
+	public List<Item> getAll() {
+		return itemDao.getAll();
 	}
 
-	public String getName() {
-		return name;
+	public static void main(String[] args) {
+		System.out.println("Shanks = = =");
+		new ItemS().getGraphData();
 	}
-
-	public void setName(String name) {
-		this.name = name;
-	}
-
-	public int getHigh() {
-		return high;
-	}
-
-	public void setHigh(int high) {
-		this.high = high;
-	}
-
 }
-
 ```
+
+3.我们继续创建一个vo包，创建一个TestVO类，存入数据库中的相应数据：
+<div>
+  <img src="/images/image/javaLearn1_4.png"/>
+</div>
