--- a/_posts/2018-03-05-javaLearn2.md
+++ b/_posts/2018-03-05-javaLearn2.md
@@ -1,6 +1,6 @@
 ---
 layout: post  #这个不变
-title: "更新中-----Java的后台学习(二)" #标题
+title: "Java的后台学习(二)" #标题
 date: 2018-03-05 20:45 #时间
 description: "基础java"  #说明
 tag: Android #这是分类标签
@@ -39,6 +39,7 @@ Dynamic web module version : 3.0, 完成项目创建。
 </div>
 
 本次我们实现获取数据库的所有内容的方法，getAll()方法：
+在controller包中建立ItemS.java文件。
 ```
 package controller;
 
@@ -168,7 +169,184 @@ public class ItemS extends HttpServlet {
 }
 ```
 
-3.我们继续创建一个vo包，创建一个TestVO类，存入数据库中的相应数据：
-<div>
-  <img src="/images/image/javaLearn1_4.png"/>
-</div>
+3.我们继续创建一个entity包(实体包)，创建一个Item类，存入数据库中的相应数据：
+
+```
+package entity;
+
+import java.sql.Date;
+
+public class Item {
+	private int itemno;
+	private String name;
+	private String tips;
+	private float money;
+	private Date date;
+	private int itemtype;
+
+	public Item() {
+		super();
+		// TODO Auto-generated constructor stub
+	}
+
+	public Item(int itemno, String name, String tips, float money, Date date, int itemtype) {
+		super();
+		this.itemno = itemno;
+		this.name = name;
+		this.tips = tips;
+		this.money = money;
+		this.date = date;
+		this.itemtype = itemtype;
+	}
+
+	public int getItemno() {
+		return itemno;
+	}
+
+	public void setItemno(int itemno) {
+		this.itemno = itemno;
+	}
+
+	public String getName() {
+		return name;
+	}
+
+	public void setName(String name) {
+		this.name = name;
+	}
+
+	public String getTips() {
+		return tips;
+	}
+
+	public void setTips(String tips) {
+		this.tips = tips;
+	}
+
+	public float getMoney() {
+		return money;
+	}
+
+	public void setMoney(float money) {
+		this.money = money;
+	}
+
+	public Date getDate() {
+		return date;
+	}
+
+	public void setDate(Date date) {
+		this.date = date;
+	}
+
+	public int getItemtype() {
+		return itemtype;
+	}
+
+	public void setItemtype(int itemtype) {
+		this.itemtype = itemtype;
+	}
+
+}
+
+```
+4.创建mapper包,创建ItemVOMapper.xml文件和ItemVOMapper.java文件：
+
+首先ItemVOMapper.xml:
+其中<mapper></mapper>的namespace(工作空间)为我们mapper包中的ItemVOMapper.java，我们在后期创建出来。
+
+其中<resultMap></resultMap>中的 type 为我们实体包中的实体Item即entity.Item。
+下面分别对应，数据库要取的数据的属性。 如第一个id为BaseResultMap里的，主键id、name、tips、money、date、itemtype等，其中类型均要写为大写。
+
+然后我们在<mapper></mapper> 还要写我们查询所有数据的SQL语句。即：
+```
+<select id="getAll" resultMap="BaseResultMap">
+  SELECT * FROM item
+</select>
+```
+其中id为我们ItemVOMapper.java中的方法名：getAll()。
+
+```
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE mapper PUBLIC "-//mybatis.org//DTD Mapper 3.0//EN" "http://mybatis.org/dtd/mybatis-3-mapper.dtd">
+<mapper namespace="mapper.ItemVOMapper">
+  <resultMap id="BaseResultMap" type="entity.Item">
+    <id column="itemno" jdbcType="INTEGER" property="itemno" />
+    <result column="name" jdbcType="VARCHAR" property="name" />
+    <result column="tips" jdbcType="VARCHAR" property="tips" />
+    <result column="money" jdbcType="FLOAT" property="money" />
+    <result column="date" jdbcType="DATE" property="date" />
+    <result column="itemtype" jdbcType="INTEGER" property="itemtype" />
+  </resultMap>
+
+  <select id="getAll" resultMap="BaseResultMap">
+    SELECT * FROM item
+  </select>
+
+</mapper>
+```
+
+现在创建ItemVOMapper.java文件：
+其实是一个接口，用于写我们需要得到数据库中的各个方法。
+```
+package mapper;
+
+
+import java.util.List;
+import java.util.Map;
+
+import entity.Item;
+import vo.Report;
+
+public interface ItemVOMapper {
+  public List<Item> getAll();
+}
+```
+
+5.创建dao包，创建ItemDao.java文件：
+这是对数据库的相关信息进行配置，通过config.xml文件。
+里面的getAll()方法，就是本次我们需要用到的。
+```
+package dao;
+
+import java.io.IOException;
+import java.io.Reader;
+import java.sql.Date;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+
+import org.apache.ibatis.io.Resources;
+import org.apache.ibatis.session.SqlSession;
+import org.apache.ibatis.session.SqlSessionFactory;
+import org.apache.ibatis.session.SqlSessionFactoryBuilder;
+
+import entity.Item;
+import mapper.ItemVOMapper;
+import utils.Utils;
+import vo.Report;
+
+public class ItemDao {
+	private static Reader reader;
+	private static SqlSessionFactory sqlSessionFactory;
+	private SqlSession sqlSession;
+
+	static {
+		try {
+			reader = Resources.getResourceAsReader("config.xml");
+			sqlSessionFactory = new SqlSessionFactoryBuilder().build(reader);
+		} catch (IOException e) {
+			e.printStackTrace();
+		}
+	}
+
+	public List<Item> getAll() {
+		sqlSession = sqlSessionFactory.openSession();
+		ItemVOMapper itemVOMapper = sqlSession.getMapper(ItemVOMapper.class);
+		return itemVOMapper.getAll();
+	}
+}
+
+```
+
+就这样通过ItemS.java文件，一步一步的调用函数getAll，获取到数据库的数据，并进行返回。其中我们用到了mybatis框架，也导入了一些配置文件，源码会发来的。
